[gd_scene load_steps=8 format=3 uid="uid://dcjtfmwb763bs"]

[ext_resource type="Script" path="res://game.gd" id="1_bodbq"]
[ext_resource type="Texture2D" uid="uid://bd6dql2ts2yje" path="res://cry.png" id="2_khkdy"]
[ext_resource type="Texture2D" uid="uid://ogcd2hjyfkbc" path="res://madness.jpg" id="3_i6k8b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vp4x5"]
bg_color = Color(1, 0, 0.305882, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7qyk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pbtd6"]

[sub_resource type="SystemFont" id="SystemFont_l2yom"]

[node name="Jogo" type="Node2D"]
script = ExtResource("1_bodbq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 649.0
color = Color(0.0453867, 0.00952855, 0.0132043, 1)

[node name="ButtonVermelho" type="Button" parent="."]
offset_left = 587.0
offset_top = 152.0
offset_right = 787.0
offset_bottom = 352.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_vp4x5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q7qyk")
flat = true

[node name="ColorRect" type="ColorRect" parent="ButtonVermelho"]
layout_mode = 0
offset_left = -1.0
offset_right = 199.0
offset_bottom = 200.0
mouse_filter = 1
color = Color(1, 0, 0, 1)

[node name="ButtonAmarelo" type="Button" parent="."]
offset_left = 386.0
offset_top = 353.0
offset_right = 586.0
offset_bottom = 553.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_vp4x5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbtd6")

[node name="ColorRect" type="ColorRect" parent="ButtonAmarelo"]
layout_mode = 0
offset_top = -1.0
offset_right = 200.0
offset_bottom = 199.0
mouse_filter = 1
color = Color(0.952718, 0.949321, 7.70092e-07, 1)

[node name="ButtonAzul" type="Button" parent="."]
offset_left = 386.0
offset_top = 152.0
offset_right = 586.0
offset_bottom = 352.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_vp4x5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbtd6")

[node name="ColorRect" type="ColorRect" parent="ButtonAzul"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 1
color = Color(0, 0, 1, 1)

[node name="ButtonVerde" type="Button" parent="."]
offset_left = 587.0
offset_top = 353.0
offset_right = 787.0
offset_bottom = 553.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_vp4x5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbtd6")

[node name="ColorRect" type="ColorRect" parent="ButtonVerde"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 199.0
offset_bottom = 199.0
mouse_filter = 1
color = Color(0, 1, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 481.0
offset_top = 50.0
offset_right = 699.0
offset_bottom = 154.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/normal_font = SubResource("SystemFont_l2yom")
theme_override_font_sizes/normal_font_size = 64
text = "Simon"

[node name="gameBlocker" type="ColorRect" parent="."]
visible = false
offset_left = 386.0
offset_top = 152.0
offset_right = 786.0
offset_bottom = 552.0
color = Color(0.454902, 0.454902, 0.454902, 0.67451)

[node name="Cry" type="Sprite2D" parent="gameBlocker"]
position = Vector2(200, 200)
scale = Vector2(0.101577, 0.101577)
texture = ExtResource("2_khkdy")

[node name="Madness" type="Sprite2D" parent="gameBlocker"]
modulate = Color(1, 1, 1, 0)
position = Vector2(206, 160)
texture = ExtResource("3_i6k8b")

[connection signal="pressed" from="ButtonVermelho" to="." method="_on_game_button_pressed" binds= [Color(1, 0, 0, 1)]]
[connection signal="pressed" from="ButtonAmarelo" to="." method="_on_game_button_pressed" binds= [Color(1, 1, 0, 1)]]
[connection signal="pressed" from="ButtonAzul" to="." method="_on_game_button_pressed" binds= [Color(0, 0, 1, 1)]]
[connection signal="pressed" from="ButtonVerde" to="." method="_on_game_button_pressed" binds= [Color(0, 1, 0, 1)]]
